Fixed a the feature card it was pushed to far out of the screen, and also changed how the episode were worded in the recently added section

--- a/style.css
+++ b/style.css
@@ -2846,7 +2846,7 @@ a {
         height: 792px;
         border-radius: 45px;
         display: none;
-        margin-left: -664px;
+        margin-left: -634px;
         margin-top: 400px;
         display: block;
         cursor: pointer;
@@ -3253,7 +3253,7 @@ a {
     .recently-wrapped{
         margin-top: -1189px;
         position: absolute;
-        margin-left: 1880px;
+        margin-left: 1410px;
     }
 
     .recently-added {
